# FileAsync

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  style.qss  tasks.json
fileasync/: ftp_sync.py  gui.py  sftp_sync.py  sync.py  webdav_sync.py
fileasync/dialog/: task_dialog.py
fileasync/gui/: table.py
