[tool.poetry]
name = "fileasync"
version = "0.1.0"
description = ""
authors = ["angleyanalbedo <100198247+angleyanalbedo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
